# GachaLogOnlineView

./: README.md  env.py  main.py  pyproject.toml
assets/: assets.py  gen.py  genshin.json  mc.json
fast_app/: app.py
fast_app/endpoints/: pb.py
fast_app/functions/: pb.py
web_app/: app.py  enums.py  schema.py  utils.py
web_app/games/: __init__.py  base.py  genshin.py  mc.py  starrail.py  zzz.py
web_app/pages/: __init__.py  gacha_log.py  loading.py
